ci: fix version

--- a/src/Scorer/MyClub.Scorer.Wpf/MyClub.Scorer.Wpf.csproj
+++ b/src/Scorer/MyClub.Scorer.Wpf/MyClub.Scorer.Wpf.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <Version>1.0.0-alpha</Version>
     <OutputType>WinExe</OutputType>
     <TargetFrameworks>net8.0-windows</TargetFrameworks>
     <UseWPF>true</UseWPF>
