--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -102,6 +102,7 @@ jobs:
   
   # Build
   build:
+    needs: [ compute_parameters ]
     runs-on: windows-latest
     name: Build project
     env:
