--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -158,20 +158,10 @@ jobs:
         with:
           name: ${{ needs.compute_parameters.outputs.application }}
           path: ${{ needs.compute_parameters.outputs.application }}/
-
-      # Download application artifacts
-      - uses: actions/download-artifact@v3
-        with:
-          name: ${{ needs.compute_parameters.outputs.application }} Plugins
-          path: ${{ needs.compute_parameters.outputs.application }}_plugins/
           
       # Zip application files
       - name: Zip artifact for deployment
         run: zip ${{ needs.compute_parameters.outputs.application }}_${{needs.compute_parameters.outputs.full_version}}.zip ${{ needs.compute_parameters.outputs.application }}/** -r
-
-      # Zip application files
-      - name: Zip plugins artifact for deployment
-        run: zip ${{ needs.compute_parameters.outputs.application }}_plugins_${{needs.compute_parameters.outputs.full_version}}.zip ${{ needs.compute_parameters.outputs.application }}_plugins/** -r
 
       # Get release labels
       - name: Define release parameters
@@ -196,7 +186,7 @@ jobs:
       - uses: ncipollo/release-action@main # https://github.com/marketplace/actions/create-release
         name: Create Release
         with:
-          artifacts: ${{ needs.compute_parameters.outputs.application }}_${{needs.compute_parameters.outputs.full_version}}.zip,${{ needs.compute_parameters.outputs.application }}_plugins_${{needs.compute_parameters.outputs.full_version}}.zip
+          artifacts: ${{ needs.compute_parameters.outputs.application }}_${{needs.compute_parameters.outputs.full_version}}.zip
           artifactErrorsFailBuild: true
           draft: true
           generateReleaseNotes: false
