--- a/src/Plugins/MyClub.Plugins.Scorer.Factory.Database/MyClub.Plugins.Scorer.Factory.Database.csproj
+++ b/src/Plugins/MyClub.Plugins.Scorer.Factory.Database/MyClub.Plugins.Scorer.Factory.Database.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <Version>1.0.0-alpha</Version>
     <OutputPath>$(MSBuildThisFileDirectory)..\..\..\build\Scorer\$(Configuration)\Plugins\$(MSBuildProjectName)</OutputPath>
   </PropertyGroup>
   
