feat: manage imports by plugins

--- a/src/Plugins/MyClub.Plugins.Teamup.Factory.Database/MyClub.Plugins.Teamup.Factory.Database.csproj
+++ b/src/Plugins/MyClub.Plugins.Teamup.Factory.Database/MyClub.Plugins.Teamup.Factory.Database.csproj
@@ -19,6 +19,9 @@
     <PackageReference Include="MyNet.Humanizer" Version="1.0.0">
       <ExcludeAssets>runtime</ExcludeAssets>
     </PackageReference>
+    <PackageReference Include="MyNet.Utilities" Version="2.2.0">
+      <ExcludeAssets>runtime</ExcludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
@@ -42,13 +45,6 @@
       <Private>false</Private>
       <ExcludeAssets>runtime</ExcludeAssets>
     </ProjectReference>
-    <ProjectReference Include="..\..\Common\MyClub.DatabaseContext.Domain\MyClub.DatabaseContext.Domain.csproj">
-      <Private>false</Private>
-      <ExcludeAssets>runtime</ExcludeAssets>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Common\MyClub.DatabaseContext.Infrastructure.Data\MyClub.DatabaseContext.Infrastructure.Data.csproj">
-      <Private>false</Private>
-      <ExcludeAssets>runtime</ExcludeAssets>
-    </ProjectReference>
+    <ProjectReference Include="..\..\Common\MyClub.DatabaseContext.Infrastructure.Data\MyClub.DatabaseContext.Infrastructure.Data.csproj" />
   </ItemGroup>
 </Project>
