--- a/src/Scorer/MyClub.Scorer.Wpf/MyClub.Scorer.Wpf.csproj
+++ b/src/Scorer/MyClub.Scorer.Wpf/MyClub.Scorer.Wpf.csproj
@@ -21,6 +21,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="MyNet.Observable" Version="3.1.0" />
     <PackageReference Include="PropertyChanged.Fody" Version="4.1.0">
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
@@ -34,10 +35,11 @@
     <PackageReference Include="MyNet.Utilities.IO.FileHistory.Registry" Version="1.0.1" />
     <PackageReference Include="MyNet.Utilities.Logging.NLog" Version="1.0.1" />
     <PackageReference Include="MyNet.Utilities.Mail.MailKit" Version="1.0.1" />
+    <PackageReference Include="MyNet.Wpf" Version="4.0.1" />
     <PackageReference Include="MyNet.Wpf.DragAndDrop" Version="3.0.0" />
     <PackageReference Include="MyNet.Wpf.LiveCharts" Version="3.0.0" />
     <PackageReference Include="MyNet.Wpf.Presentation" Version="3.0.0" />
-    <PackageReference Include="MyNet.UI" Version="4.0.0" />
+    <PackageReference Include="MyNet.UI" Version="4.1.0" />
     <PackageReference Include="MyNet.Xaml.Merger.MSBuild" Version="2.0.1">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
