--- a/src/Teamup/MyClub.Teamup.Wpf/config/appsettings.Debug.json
+++ b/src/Teamup/MyClub.Teamup.Wpf/config/appsettings.Debug.json
@@ -2,7 +2,7 @@
   "DisableMail": true,
   "Mock": {
     "Directory":  "Mocks",
-    "FactoryName": "Factory.Database",
+    "FactoryName": "Factory.Random",
     "RandomizeData": false
   }
 }
